solc_ossfuzz_seed_corpus/test_sol/test_b940b3a6575a105ba8bb6e1b026abcf60cd1c8375a768767463cc0beffad1005_da458bbb9142f07457b03a77abc16e197d8f5014_sol.sol
==== Source:  ====

==== Source: su0.sol ====
function f0(bytes6 i0,bool i1)  returns(bytes memory o0,function () external o1,bool o2)
{
  i1 = (33332324599071636000179449695262100214680518133098715 > (42956539363754474230766995109190933172131400003586316 ^ -45223689697501513310840362844705457621546343017932256));
  {






{
}
{


  {
  }


  {



    {



    }

    o2 = (false && true);
    {


      {






      }

    }

  }
}

  }
}
pragma abicoder v1;
pragma solidity >= 0.0.0;
// ----
// TypeError 2271: (su0.sol:99-267): Operator > not compatible with types int_const 3333...(45 digits omitted)...8715 and int_const -376...(45 digits omitted)...9412
